# H

./: .gitignore
Server/: .env.example  app.py  config.py  main.py  pyproject.toml  schemas.py  test_tools.py
Server/agent/: __init__.py  analyst.py
Server/model/: models_fred.py
Server/routes/: __init__.py  chat.py  ticker.py
Server/services/: __init__.py  market.py  metrics.py  sec.py
Server/tools/: observations.py  search_series.py
apps/web/: package-lock.json
apps/web/app/t/[ticker]/: page.tsx
apps/web/app/t/[ticker]/components/: AnalystChat.tsx  ChatInput.tsx  ChatMessage.tsx  WelcomeScreen.tsx
apps/web/hooks/: useChat.ts
apps/web/lib/: api.ts  formatters.ts  types.ts
client/: package-lock.json  package.json
client/app/api/analysis/: route.ts
client/app/t/[ticker]/: page.tsx
client/components/charts/: AreaChart.tsx  BarChart.tsx  ChartContainer.tsx  ComparativeChart.tsx  LineChart.tsx  index.ts
client/lib/agents/chief/: chief.agent.ts
client/lib/agents/subagents/macro/: macro.agent.ts
client/lib/config/: indicators.ts
client/lib/mcp/: client.ts
client/lib/types/: macro-context.ts
docs/: ARCHITECTURE.md  CLIENT.md  MCP_CLIENT.md  changelog.md  readme.md
docs/01_scope/: MVP_Definition.md
docs/02_sessions/: readme.md
docs/03_decisions/: readme.md
docs/04_specs/: readme.md
docs/05_ia/: readme.md
docs/06_resources/: readme.md
