[project]
name = "stock-analysis-api"
version = "0.2.0"
description = "Stock Analysis API with AI Equity Analyst"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "yfinance>=0.2.0",
    "openai>=1.54.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "diskcache>=5.6.0",
]
